# conan-objects-example

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  myobject.cpp  myobject.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
